fix: cluster info spacing

--- a/src/features/Header/cluster.module.css
+++ b/src/features/Header/cluster.module.css
@@ -25,7 +25,7 @@
   .ws-status-icon {
     height: 12px;
     width: 12px;
-    margin: 0 -2px;
+    margin: -1px -2px 0 -2px;
     user-select: none;
   }
 }
